--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,6 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "plugins": [
-        "i18next-extract"
-      ]
+    presets: ['@babel/preset-env', '@babel/preset-react'],
+    plugins: [
+        'i18next-extract'
+    ]
 }
