--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "build:prod": "webpack --env mode=production",
         "build:dev": "webpack --env mode=development && webpack serve --env port=3000",
         "lint:ts": "npx eslint \"**/*.{ts,tsx}\" ",
-        "lint:fix": "npx eslint \"**/*.{ts,tsx}\" --fix"
+        "lint:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
+        "stylelint": "npx stylelint \"**/*.scss\"",
+        "stylelint:fix": "npx stylelint \"**/*.scss\" --fix"
     },
     "repository": {
         "type": "git",
@@ -40,6 +42,7 @@
         "css-loader": "^6.6.0",
         "eslint": "^8.24.0",
         "eslint-config-airbnb": "^19.0.4",
+        "eslint-plugin-i18next": "^6.0.0-2",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-react": "^7.31.8",
@@ -50,6 +53,9 @@
         "react-refresh": "^0.14.0",
         "sass-loader": "^12.6.0",
         "style-loader": "^3.3.1",
+        "stylelint": "^14.13.0",
+        "stylelint-config-standard": "^28.0.0",
+        "stylelint-config-standard-scss": "^5.0.0",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.5.0",
         "type-fest": "^2.19.0",
