--- a/package.json
+++ b/package.json
@@ -1,77 +1,81 @@
 {
-    "name": "react_proj",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "webpack serve --env port=3000",
-        "build:prod": "webpack --env mode=production",
-        "build:dev": "webpack --env mode=development && webpack serve --env port=3000",
-        "lint:ts": "npx eslint \"**/*.{ts,tsx}\" ",
-        "lint:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
-        "stylelint": "npx stylelint \"**/*.scss\"",
-        "stylelint:fix": "npx stylelint \"**/*.scss\" --fix"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/TheBlackLynx/react_proj.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/TheBlackLynx/react_proj/issues"
-    },
-    "homepage": "https://github.com/TheBlackLynx/react_proj#readme",
-    "devDependencies": {
-        "@babel/core": "^7.19.3",
-        "@babel/preset-env": "^7.19.3",
-        "@babel/preset-react": "^7.18.6",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-        "@svgr/webpack": "^6.4.0",
-        "@types/node": "^17.0.21",
-        "@types/react": "^17.0.39",
-        "@types/react-dom": "^17.0.11",
-        "@types/react-router-dom": "^5.3.3",
-        "@types/webpack": "^5.28.0",
-        "@types/webpack-dev-server": "^4.7.2",
-        "@typescript-eslint/eslint-plugin": "^5.39.0",
-        "@typescript-eslint/parser": "^5.39.0",
-        "babel-loader": "^8.2.5",
-        "babel-plugin-i18next-extract": "^0.9.0",
-        "css-loader": "^6.6.0",
-        "eslint": "^8.24.0",
-        "eslint-config-airbnb": "^19.0.4",
-        "eslint-plugin-i18next": "^6.0.0-2",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jsx-a11y": "^6.6.1",
-        "eslint-plugin-react": "^7.31.8",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "file-loader": "^6.2.0",
-        "html-webpack-plugin": "^5.5.0",
-        "mini-css-extract-plugin": "^2.5.3",
-        "react-refresh": "^0.14.0",
-        "sass-loader": "^12.6.0",
-        "style-loader": "^3.3.1",
-        "stylelint": "^14.13.0",
-        "stylelint-config-standard": "^28.0.0",
-        "stylelint-config-standard-scss": "^5.0.0",
-        "ts-loader": "^9.2.6",
-        "ts-node": "^10.5.0",
-        "type-fest": "^2.19.0",
-        "typescript": "^4.5.5",
-        "webpack": "^5.69.1",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.7.4"
-    },
-    "dependencies": {
-        "i18next": "^21.9.2",
-        "i18next-browser-languagedetector": "^6.1.5",
-        "i18next-http-backend": "^1.4.4",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-i18next": "^11.18.6",
-        "react-router-dom": "^6.2.1",
-        "sass": "^1.49.9"
-    }
+  "name": "react_proj",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack serve --env port=3000",
+    "build:prod": "webpack --env mode=production",
+    "build:dev": "webpack --env mode=development && webpack serve --env port=3000",
+    "lint:ts": "npx eslint \"**/*.{ts,tsx}\" ",
+    "lint:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
+    "stylelint": "npx stylelint \"**/*.scss\"",
+    "stylelint:fix": "npx stylelint \"**/*.scss\" --fix",
+    "unit": "jest --config ./config/jest/jest.config.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TheBlackLynx/react_proj.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/TheBlackLynx/react_proj/issues"
+  },
+  "homepage": "https://github.com/TheBlackLynx/react_proj#readme",
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.16.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^6.4.0",
+    "@types/jest": "^29.1.2",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-i18next-extract": "^0.9.0",
+    "css-loader": "^6.6.0",
+    "eslint": "^8.24.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-i18next": "^6.0.0-2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.5.1",
+    "mini-css-extract-plugin": "^2.5.3",
+    "react-refresh": "^0.14.0",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
+    "stylelint": "^14.13.0",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.5.0",
+    "type-fest": "^2.19.0",
+    "typescript": "^4.5.5",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "i18next": "^21.9.2",
+    "i18next-browser-languagedetector": "^6.1.5",
+    "i18next-http-backend": "^1.4.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.18.6",
+    "react-router-dom": "^6.2.1",
+    "sass": "^1.49.9"
+  }
 }
