--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,8 @@
         }
     },
     "include": [
-        "./config/jest/jest-setup.ts"
+        "./config/jest/jest-setup.ts",
+        "./src/**/*.ts",
+        "./src/**/*.tsx",
       ],
   }
