--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "loki": "^0.30.3",
     "mini-css-extract-plugin": "^2.5.3",
     "react-refresh": "^0.14.0",
     "sass-loader": "^12.6.0",
@@ -94,5 +95,20 @@
     "react-router-dom": "^6.2.1",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.docker",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.docker",
+        "preset": "iPhone 7"
+      }
+    }
   }
 }
