--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,31 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+on: 
+  push: 
+    branches: [main]
+  pull_request:
+    branches: [main]
 jobs:
-  check-bats-version:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+    pipeline: 
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          node-version: [17.x]
+      steps:
+        - uses: actions/checkout@v2
+        - name: Staring node.js ${{matrix.node-version}}
+          uses: actions/setup-node@v1
+            with: 
+              node-version: ${{matrix.node-version}}
+        - name: install modules
+          run: npm install
+        - name: build production project
+          run: npm run build:prod
+        - name: linting typescript
+          run: npm run lint:ts
+        - name: linting styles
+          run: npm run stylelint
+        - name: run unit tests
+          run: npm run test:unit
+      
+
