--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,25 @@
-name: learn-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
-on: 
-  push: 
-    branches: [main]
+name: main
+run-name: check job
+on:
+  push:
+    branches: [ main ]
   pull_request:
-    branches: [main]
+    branches: [ main ]
 jobs:
-    pipeline: 
-      runs-on: ubuntu-latest
-      strategy:
-        matrix:
-          node-version: [17.x]
-      steps:
-        - uses: actions/checkout@v2
-        - name: Staring node.js ${{matrix.node-version}}
-          uses: actions/setup-node@v1
-            with: 
-              node-version: ${{matrix.node-version}}
-        - name: install modules
-          run: npm install
-        - name: build production project
-          run: npm run build:prod
-        - name: linting typescript
-          run: npm run lint:ts
-        - name: linting styles
-          run: npm run stylelint
-        - name: run unit tests
-          run: npm run test:unit
-      
-
+  build:
+  runs-on: ubuntu-latest
+  strategy:
+    matrix:
+      node-version: [ 17.x]
+     
+  steps:
+  - uses: actions/checkout@v2
+  - name: Use Node.js ${{ matrix.node-version }}
+    uses: actions/setup-node@v1
+    with:
+      node-version: ${{ matrix.node-version }}
+  - run: npm install
+  - run: npm run build:prod
+  - run: npm run lint:ts
+  - run: npm run stylelint
+  - run: npm run test:unit
