--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-  build:
-  runs-on: ubuntu-latest
-  strategy:
-    matrix:
+  pipeline:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
       node-version: [ 17.x]
      
   steps:
