--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
        node-version: ${{ matrix.node-version }}
-    - run: npm install
-    - run: npm run build:prod
-    - run: npm run lint:ts
-    - run: npm run stylelint
-    - run: npm run test:unit
+    run: npm install
+    run: npm run build:prod
+    run: npm run lint:ts
+    run: npm run stylelint
+    run: npm run test:unit
