--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,17 +8,17 @@ on:
 jobs:
   pipeline:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
+  strategy:
+    matrix:
       node-version: [ 17.x]   
-    steps:
-       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      run: npm install
-      run: npm run build:prod
-      run: npm run lint:ts
-      run: npm run stylelint
-      run: npm run test:unit
+  steps:
+  - uses: actions/checkout@v3
+  - name: Use Node.js ${{ matrix.node-version }}
+    uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+  - run: npm install
+  - run: npm run build:prod
+  - run: npm run lint:ts
+  - run: npm run stylelint
+  - run: npm run test:unit
