--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
   - name: Use Node.js ${{ matrix.node-version }}
     uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: [ 17.x ]
   - run: npm install
   - run: npm run build:prod
   - run: npm run lint:ts
