--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: actions/setup-node@v1
+            with:
+              node-version: [ 17.x ]
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
