--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: actions/setup-node@v1
-            with:
-              node-version: [ 17.x ]
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
