--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - run: npm install
+      - run: npm run build:prod
+      - run: npm run lint:ts
+      - run: npm run stylelint
+      - run: npm run test:unit
