--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,5 @@ jobs:
           node-version: '12.x'
       - run: npm install
       - run: npm run build:prod
-      - run: npm run lint:ts
-      - run: npm run stylelint
-      - run: npm run test:unit
+      - run: test:ui:ci
+    
