--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
           node-version: '12.x'
       - run: npm install
       - run: npm run build:prod
-      - run: test:ui:ci
+      - run: npm run test:ui:ci
     
