--- a/package.json
+++ b/package.json
@@ -100,6 +100,9 @@
     "sass": "^1.49.9"
   },
   "loki": {
+    "looks-same": {
+      "ignoreCaret": true
+    },
     "configurations": {
       "chrome.laptop": {
         "target": "chrome.docker",
