--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,12 @@ jobs:
           node-version: '12.x'
       - run: npm install
       - run: npm run build:prod
+        if: always()
+      - run: npm run lint:ts
+        if: always()
+      - run: npm run stylelint
+        if: always()
+      - run: npm run test:unit
+        if: always()
       - run: npm run test:ui:ci
     
