--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,6 @@ jobs:
         if: always()
       - run: npm run test:unit
         if: always()
+      - run: npm run test:ui:ok
       - run: npm run test:ui:ci
     
