--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "loki": "^0.30.3",
     "mini-css-extract-plugin": "^2.5.3",
     "react-refresh": "^0.14.0",
+    "reg-cli": "^0.17.7",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.13.0",
