--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,6 @@ jobs:
       - run: npm run stylelint
         if: always()
       - run: npm run test:unit
+        if: always()
+      - run: npm run test:ui:ci
     
