--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
         if: always()
       - run: npm run test:unit
         if: always()
-      - run: npm run test:ui:ci
+      - run: npm run test:ui:ok
     
