--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,6 @@ jobs:
         if: always()
       - run: npm run test:unit
         if: always()
-      - run: npm run storybook:build
+      - run: npm run storybook
       - run: npx run test:ui:ci
     
