--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "@svgr/webpack": "^6.4.0",
+    "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.1.2",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
