--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,15 +30,15 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-      - run: npm install
-      - run: npm run build:prod
-        if: always()
-      - run: npm run lint:ts
-        if: always()
-      - run: npm run stylelint
-        if: always()
-      - run: npm run test:unit
-        if: always()
+      # - run: npm install
+      # - run: npm run build:prod
+      #   if: always()
+      # - run: npm run lint:ts
+      #   if: always()
+      # - run: npm run stylelint
+      #   if: always()
+      # - run: npm run test:unit
+      #   if: always()
    #   - run: npm run build-storybook
    #   - run: npm run test:ui:ci
     
