--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
     "start:dev:server": "node ./json-server/index.js",
     "build:prod": "webpack --env mode=production",
-    "build:dev": "webpack --env mode=development && webpack serve --env port=3000",
+    "build:dev": "webpack --env mode=development && webpack serve --env port=3000 apiUrl=https://react-proj-backend-prod.vercel.app/",
     "lint:ts": "npx eslint \"**/*.{ts,tsx}\" ",
     "lint:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
     "stylelint": "npx stylelint \"**/*.scss\"",
@@ -65,6 +65,7 @@
     "@typescript-eslint/parser": "^5.39.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-i18next-extract": "^0.9.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.6.0",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
