--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "webpack serve --env port=3000",
     "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
     "start:dev:server": "node ./json-server/index.js",
-    "build:prod": "webpack --env mode=production",
-    "build:dev": "webpack --env mode=development && webpack serve --env port=3000 apiUrl=https://react-proj-backend-prod.vercel.app/",
+    "build:prod": "webpack --env mode=production apiUrl=https://react-proj-backend-prod.vercel.app/",
+    "build:dev": "webpack --env mode=development && webpack serve --env port=3000 ",
     "lint:ts": "npx eslint \"**/*.{ts,tsx}\" ",
     "lint:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
     "stylelint": "npx stylelint \"**/*.scss\"",
