--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-i18next": "^6.0.0-2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-marica-path-checker-plugin": "^0.0.6",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.6",
@@ -101,6 +102,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/react-virtualized": "^9.21.21",
     "axios": "^1.2.1",
     "concurrently": "^7.6.0",
     "i18next": "^21.9.2",
@@ -111,8 +113,14 @@
     "react-i18next": "^11.18.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1",
+    "react-virtualized": "^9.22.4",
+    "react-virtuoso": "^4.2.1",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "loki": {
     "chromeSelector": "#root > *",
