--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "eslint-plugin-marica-path-checker-plugin": "^0.0.6",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.6.6",
+    "eslint-plugin-storybook": "^0.6.11",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
@@ -116,7 +116,8 @@
     "react-virtualized": "^9.22.4",
     "react-virtuoso": "^4.2.1",
     "regenerator-runtime": "^0.13.9",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "storybook": "^6.5.12"
   },
   "peerDependencies": {
     "react": "^17.0.2",
