--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/react-virtualized": "^9.21.21",
     "axios": "^1.2.1",
