--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "storybook:build": "build-storybook -c ./config/storybook",
     "visual:report:json": "node scripts/generate-visual-json-report.js",
     "visual:report:html": "reg-cli --from .loki/report.json --report .loki/report.html",
+    "generate:slice": "node ./scripts/createSlice/index.js",
     "prepare": "husky install"
   },
   "repository": {
