--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.1.2",
     "@types/node": "^17.0.21",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^17.0.60",
+    "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.6.0",
@@ -89,6 +89,7 @@
     "react-refresh": "^0.14.0",
     "reg-cli": "^0.17.7",
     "sass-loader": "^12.6.0",
+    "storybook-addon-mock": "^2.4.1",
     "style-loader": "^3.3.1",
     "stylelint": "^14.13.0",
     "stylelint-config-standard": "^28.0.0",
@@ -111,8 +112,8 @@
     "i18next": "^21.9.2",
     "i18next-browser-languagedetector": "^6.1.5",
     "i18next-http-backend": "^1.4.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1",
@@ -121,10 +122,6 @@
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
     "storybook": "^6.5.12"
-  },
-  "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
   },
   "loki": {
     "chromeSelector": "#root > *",
