--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.11",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
@@ -104,6 +105,8 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.4",
+    "@babel/plugin-transform-typescript": "^7.22.3",
     "@headlessui/react": "^1.7.14",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/circular-dependency-plugin": "^5.0.5",
