--- a/babel.config.json
+++ b/babel.config.json
@@ -1,8 +1,16 @@
 {
-    presets: ['@babel/preset-env',  ["@babel/preset-react", {
-        "runtime": "automatic"
-     }], '@babel/preset-typescript'],
-    plugins: [
-        'i18next-extract'
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-typescript",
+      [
+        "@babel/preset-react",
+        {
+          "runtime": "automatic"
+        }
+      ]
+    ],
+    "plugins": [
+      "i18next-extract"
     ]
-}
+  }
+  
