--- a/package.json
+++ b/package.json
@@ -108,9 +108,11 @@
     "@babel/plugin-transform-runtime": "^7.22.4",
     "@babel/plugin-transform-typescript": "^7.22.3",
     "@headlessui/react": "^1.7.14",
+    "@react-spring/web": "^9.7.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/circular-dependency-plugin": "^5.0.5",
     "@types/react-virtualized": "^9.21.21",
+    "@use-gesture/react": "^10.2.27",
     "axios": "^1.2.1",
     "circular-dependency-plugin": "^5.2.2",
     "concurrently": "^7.6.0",
