--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "start:vite": "vite",
     "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
+    "start:dev:vite": "concurrently \"npm run start:vite \" \"npm run start:dev:server\"",
     "start:dev:server": "node ./json-server/index.js",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development && webpack serve --env port=3000 ",
@@ -64,6 +66,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
+    "@vitejs/plugin-react": "^4.0.2",
     "babel-loader": "^8.2.5",
     "babel-plugin-i18next-extract": "^0.9.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -100,6 +103,8 @@
     "ts-node": "^10.9.1",
     "type-fest": "^2.19.0",
     "typescript": "^4.5.5",
+    "vite": "^4.4.2",
+    "vite-plugin-svgr": "^3.2.0",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.4.1",
     "webpack-cli": "^4.10.0",
