--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "visual:report:json": "node scripts/generate-visual-json-report.js",
     "visual:report:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "generate:slice": "node ./scripts/createSlice/index.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "node ./scripts/refactoring/clear-cache.js"
   },
   "repository": {
     "type": "git",
