--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-marica-path-checker-plugin": "^0.0.13",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.11",
