--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,20 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+name: learn-github-actions
+run-name: ${{ github.actor }} is learning GitHub Actions
+on: [push]
 jobs:
-  pipeline:
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        node-version: [17.x]
+  check-bats-version:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Run a one-line script
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node - version }}
+          node-version: '14'
       - run: npm ci --force
       - run: npm run build:prod
-        if: always()
       - run: npm run lint:ts
-        if: always()
       - run: npm run stylelint
-        if: always()
       - run: npm run test:unit
-        if: always()
-     - run: npm run build-storybook
-     - run: npm run test:ui:ci
-    
+      - run: npm run build-storybook
+      - run: npm run test:ui:ci
+      
+
